--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "requests>=2.31.0",
     "structlog>=24.1.0",
     "beautifulsoup4>=4.12.3",
+    "fastapi>=0.111.0",
+    "uvicorn>=0.29.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
